--- a/content/experience/0821-1221-split.md
+++ b/content/experience/0821-1221-split.md
@@ -1,6 +1,6 @@
 ---
 title: "Frontend Engineer Intern"
-description: "Pay With Split"
+description: "Split"
 dateString: Aug 2021 - Dec 2021
 draft: false
 tags: ["React", "TypeScript", "Storybook", "React Native"]
