--- a/content/experience/0922-1023-rws.md
+++ b/content/experience/0922-1023-rws.md
@@ -1,7 +1,7 @@
 ---
 title: "Software Engineer"
 description: "Resorts World Sentosa - Application Development"
-dateString: Sep 2022 - Present
+dateString: Sep 2022 - Oct 2023
 draft: false
 tags: ["Java", "Spring Boot", "React", "TypeScript", "React Native", "Material UI"]
 showToc: false
