update work exp

--- a/content/experience/0821-1221-split.md
+++ b/content/experience/0821-1221-split.md
@@ -9,6 +9,6 @@ weight: 402
 --- 
 
 ### Description
-Front-end Engineer Intern (Part-time)
-- Involved in front-end development of customer mobile application (React Native, TypeScript)
-- Developed 2 UI components (ReactJS) and documented on Storybook
+Front-end Engineer Intern
+- Contributed to mobile app front-end development (React Native, TypeScript)
+- Crafting 2 UI components (React JS), documented and showcased work on Storybook
