--- a/content/experience/0922-1023-rws.md
+++ b/content/experience/0922-1023-rws.md
@@ -9,8 +9,11 @@ weight: 401
 --- 
 
 ### Description
-- Design and develop 5 features in web and 2 features in mobile application to meet functional and technical requirements (React JS, Redux, React Router, Material UI, React Native, TypeScript)
-- Implement backend APIs (Java Spring Boot), integrate with frontend app and collaborate with UX designer and business analysts to improve usability (Figma)
+- Led frontend development for web applications, from scaffolding layout to implementing UX-designed prototypes using React JS, TypeScript and Redux
+- Proficiently utilized Sass and Material UI to ensure a seamless integration of design elements, maintaining a consistent and polished look and feel throughout the web application
+- Expanded application functionality by adding new pages and developing reusable components for enhanced modularity
+- Engineered robust API solutions in Java Spring Boot, seamlessly integrating backend data with front-end functionality to optimize system performance
 - Conduct thorough code reviews to identify and address potential issues in collaboration with other team members, provide constructive feedback and seek opportunities for improvement
+
 
 
