update weight for display order

--- a/content/experience/2209-2310-rws.md
+++ b/content/experience/2209-2310-rws.md
@@ -3,17 +3,16 @@ title: "Software Engineer"
 description: "Resorts World Sentosa - Application Development"
 dateString: Sep 2022 - Oct 2023
 draft: false
-tags: ["Java", "Spring Boot", "React", "TypeScript", "React Native", "Material UI"]
+tags:
+  ["Java", "Spring Boot", "React", "TypeScript", "React Native", "Material UI"]
 showToc: false
-weight: 401
---- 
+weight: -2209
+---
 
 ### Description
+
 - Led frontend development for web applications, from scaffolding layout to implementing UX-designed prototypes using React JS, TypeScript and Redux
 - Proficiently utilized Sass and Material UI to ensure a seamless integration of design elements, maintaining a consistent and polished look and feel throughout the web application
 - Expanded application functionality by adding new pages and developing reusable components for enhanced modularity
 - Engineered robust API solutions in Java Spring Boot, seamlessly integrating backend data with front-end functionality to optimize system performance
 - Conduct thorough code reviews to identify and address potential issues in collaboration with other team members, provide constructive feedback and seek opportunities for improvement
-
-
-
